# BpManager

./: CMakeLists.txt  README.md  bp-manager.pc.in
include/: bp_manager_common.h
packaging/: bp-manager.service  bp-manager.spec
src/: CMakeLists.txt  bp-manager.conf.in  bp_manager_dbus_interface.c  bp_manager_implementation.c  org.tizen.bp.manager.conf.in  org.tizen.bp.manager.service.in
src/tidl/: remote_service.tidl  stub_service.tidl
unit_tests/: CMakeLists.txt
unit_tests/mock/: mock.cc  mock.h
unit_tests/src/: app_display_unittest.cc  app_event_unittest.cc  app_finalizer_unittest.cc  app_package_unittest.cc  app_path_unittest.cc  app_resource_manager_unittest.cc  app_watchdog_unittest.cc  main.cc
