CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

SET(INC_DIR include)

SET(SERVER bp-manager)

IF(NOT DEFINED DBUS_INTERFACE)
	MESSAGE("No DBUS_INTERFACE. Check build system")
	SET(DBUS_INTERFACE "org.tizen.bp.manager")
ENDIF(NOT DEFINED DBUS_INTERFACE)

ADD_SUBDIRECTORY(src)

#IF(NOT DEFINED MINIMUM_BUILD)
#ENABLE_TESTING()
#SET(APP_COMMON_UNITTESTS app-common_unittests)
#ADD_TEST(NAME ${APP_COMMON_UNITTESTS} COMMAND ${APP_COMMON_UNITTESTS}
#        WORKING_DIRECTORY ${CMAKE_SOURCE_DIR}/unit_tests)
#
#ADD_SUBDIRECTORY(unit_tests)
#ADD_DEPENDENCIES(${APP_COMMON_UNITTESTS} capi-appfw-app-common)
#ENDIF(NOT DEFINED MINIMUM_BUILD)

#INSTALL(
#        DIRECTORY ${INC_DIR}/ DESTINATION include/bp-manager
#        FILES_MATCHING
#        PATTERN "*_private.h" EXCLUDE
#        PATTERN "${INC_DIR}/*.h"
#        )
