CMAKE_MINIMUM_REQUIRED(VERSION 2.8)
PROJECT(bp-manager_unittests CXX)

INCLUDE(FindPkgConfig)
pkg_check_modules(bp-manager_unittests REQUIRED
    glib-2.0
    gmock
    dlog
)

FOREACH(flag ${bp-tizen_unittests_CFLAGS})
	SET(EXTRA_CFLAGS "${EXTRA_CFLAGS} ${flag}")
ENDFOREACH(flag)
SET(EXTRA_CFLAGS "${EXTRA_CFLAGS} -fvisibility=hidden -Wall -Werror -Winline")

SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${EXTRA_CFLAGS} -std=c++11")
SET(CMAKE_CXX_FLAGS_DEBUG "-O0 -g")
SET(CMAKE_CXX_FLAGS_RELEASE "-O2")

INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/../src)
INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/../include)
INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/../)

AUX_SOURCE_DIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/../src LIB_SOURCES)
AUX_SOURCE_DIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/../unit_tests/mock MOCK_SOURCES)
AUX_SOURCE_DIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/../unit_tests/src SOURCES)
ADD_EXECUTABLE(${PROJECT_NAME}
	${SOURCES}
	${LIB_SOURCES}
	${MOCK_SOURCES}
)

SET_TARGET_PROPERTIES(${PROJECT_NAME} PROPERTIES COMPILE_FLAGS "${EXTRA_CFLAGS}")
TARGET_LINK_LIBRARIES(${PROJECT_NAME} ${bp-tizen_unittests_LDFLAGS} bsp-bp-manager)

INSTALL(TARGETS ${PROJECT_NAME} DESTINATION /usr/bin)
